[gd_scene load_steps=36 format=2]

[ext_resource path="res://Ragdoll/ArmL.png" type="Texture" id=1]
[ext_resource path="res://Ragdoll.gd" type="Script" id=2]
[ext_resource path="res://Ragdoll/spacepfp.png" type="Texture" id=3]
[ext_resource path="res://Ragdoll/spacepfp_hurt.png" type="Texture" id=4]
[ext_resource path="res://rock spawn.gd" type="Script" id=5]
[ext_resource path="res://rock2.tscn" type="PackedScene" id=6]
[ext_resource path="res://ship.png" type="Texture" id=7]
[ext_resource path="res://Ragdoll/LegL.png" type="Texture" id=8]
[ext_resource path="res://Ragdoll/LegR.png" type="Texture" id=9]
[ext_resource path="res://Ragdoll/Torso.png" type="Texture" id=10]
[ext_resource path="res://Ragdoll/ArmR.png" type="Texture" id=11]
[ext_resource path="res://spawn.gd" type="Script" id=12]
[ext_resource path="res://gameover.png" type="Texture" id=13]
[ext_resource path="res://Untitled-2.png" type="Texture" id=14]
[ext_resource path="res://under.png" type="Texture" id=15]
[ext_resource path="res://up.png" type="Texture" id=16]
[ext_resource path="res://up2.png" type="Texture" id=17]
[ext_resource path="res://spacepfp_sufficate.png" type="Texture" id=18]
[ext_resource path="res://spacepfp_dead.png" type="Texture" id=19]
[ext_resource path="res://up3.png" type="Texture" id=20]
[ext_resource path="res://win.png" type="Texture" id=21]
[ext_resource path="res://set_1.tscn" type="PackedScene" id=22]
[ext_resource path="res://tooquick.wav" type="AudioStream" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "sufficate",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="Animation" id=12]
resource_name = "end"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 484.604, -108.226 ), Vector2( 484.604, 150.982 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "mid"
length = 4.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.98 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 61.2463, 192.643 ), Vector2( 918.664, 192.643 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]
height = 25.6623

[sub_resource type="CapsuleShape2D" id=3]
radius = 16.4291
height = 26.2572

[sub_resource type="CapsuleShape2D" id=4]
radius = 17.6627
height = 20.449

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32.9752, 10 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 26.6112
height = 27.9272

[sub_resource type="CircleShape2D" id=7]
radius = 49.1188

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 322.625, 10 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 197.953 )

[sub_resource type="Animation" id=11]
resource_name = "end"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 484.604, -108.226 ), Vector2( 484.604, 150.982 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="won" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 522.578, 200.141 )
scale = Vector2( 0.519998, 0.519998 )
z_index = 4
texture = ExtResource( 21 )

[node name="end" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 507.878, 269.561 )
scale = Vector2( 0.519998, 0.519998 )
z_index = 4
texture = ExtResource( 13 )

[node name="Control" type="Control" parent="CanvasLayer"]
margin_top = 2.99661
margin_right = 40.0
margin_bottom = 42.9966
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="TextureProgress" parent="CanvasLayer/Control"]
margin_left = 655.083
margin_top = 578.008
margin_right = 1650.08
margin_bottom = 992.008
rect_scale = Vector2( -0.121658, 0.0405493 )
step = 0.1
value = 100.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 16 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help" type="TextureProgress" parent="CanvasLayer/Control"]
margin_left = 769.393
margin_top = 2.0
margin_right = 4989.39
margin_bottom = 256.0
rect_scale = Vector2( -0.121658, 0.0405493 )
step = 0.01
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 20 )
fill_mode = 1
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Oxygen" type="TextureProgress" parent="CanvasLayer/Control"]
margin_left = 499.247
margin_top = 578.513
margin_right = 1499.25
margin_bottom = 1014.51
rect_scale = Vector2( -0.121658, 0.0405493 )
step = 0.4
value = 50.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 17 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aboali" type="AnimatedSprite" parent="CanvasLayer/Control"]
position = Vector2( 515.514, 555.11 )
scale = Vector2( 0.35965, 0.35965 )
frames = SubResource( 1 )
animation = "normal"
playing = true

[node name="Untitled-2" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 487.229, 176.645 )
scale = Vector2( 0.43, 0.43 )
texture = ExtResource( 14 )

[node name="ship2" type="Sprite" parent="."]
modulate = Color( 0.392157, 0.4, 0.462745, 1 )
position = Vector2( 21.314, 192.643 )
scale = Vector2( 0.143408, 0.143408 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ship2"]
anims/end = SubResource( 12 )
anims/mid = SubResource( 13 )

[node name="spawn" type="Position2D" parent="."]
position = Vector2( -2, -328.394 )
script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="spawn"]
process_mode = 0
wait_time = 4.0
autostart = true

[node name="set_1" parent="spawn" instance=ExtResource( 22 )]
position = Vector2( 0, 1.19714 )

[node name="rock spawn" type="Position2D" parent="."]
position = Vector2( 0, -169.554 )
script = ExtResource( 5 )

[node name="Player" type="Node2D" parent="."]
position = Vector2( 448.589, 275.355 )

[node name="ArmL" type="RigidBody2D" parent="Player"]
position = Vector2( -5.38628, 2.55561 )
collision_layer = 3
collision_mask = 3
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player/ArmL"]
position = Vector2( 5.91663, 6.10648 )
amount = 15
lifetime = 2.0
lifetime_randomness = 0.33
local_coords = false
emission_shape = 1
emission_sphere_radius = 4.95
gravity = Vector2( 0, 0 )
scale_amount = 1.8
scale_amount_random = 0.6

[node name="Sprite" type="Sprite" parent="Player/ArmL"]
position = Vector2( -4.05891, 3.2204 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/ArmL"]
position = Vector2( -5.37772, 4.14547 )
rotation = 0.956228
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 2 )

[node name="ArmR" type="RigidBody2D" parent="Player"]
position = Vector2( 5.2868, 3.08257 )
collision_layer = 3
collision_mask = 3
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player/ArmR"]
position = Vector2( 5.98627, 2.92775 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/ArmR"]
position = Vector2( 7.66878, 3.78707 )
rotation = -1.02049
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 2 )

[node name="LegR" type="RigidBody2D" parent="Player"]
position = Vector2( 4.17828, 14.141 )
rotation = 0.0107183
collision_layer = 3
collision_mask = 3
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player/LegR"]
position = Vector2( -0.301323, -0.525206 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )
offset = Vector2( 22.5667, 29.9638 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/LegR"]
position = Vector2( 4.25902, 6.84837 )
rotation = -0.65735
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 3 )

[node name="LegL" type="RigidBody2D" parent="Player"]
position = Vector2( -3.89447, 13.1615 )
collision_layer = 3
collision_mask = 3
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player/LegL"]
position = Vector2( -3.58548, 6.02853 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/LegL"]
position = Vector2( -3.47701, 7.22992 )
rotation = 0.545441
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 4 )

[node name="Torso" type="RigidBody2D" parent="Player"]
collision_layer = 3
collision_mask = 3
gravity_scale = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player/Torso"]
position = Vector2( 3.72529e-09, 0.03125 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )
offset = Vector2( 1.49012e-07, -0.156248 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Player/Torso"]
position = Vector2( 0.470505, 12.3385 )
rotation = 0.055632
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Torso"]
position = Vector2( 0.557312, 8.1783 )
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player/Torso"]
position = Vector2( -0.126282, -7.81571 )
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 7 )

[node name="Joints" type="Node2D" parent="Player"]

[node name="LegL" type="PinJoint2D" parent="Player/Joints"]
position = Vector2( -2.87271, 14.0428 )
node_a = NodePath("../../Torso")
node_b = NodePath("../../LegL")
disable_collision = false

[node name="LegR" type="PinJoint2D" parent="Player/Joints"]
position = Vector2( 3.84845, 14.2011 )
node_a = NodePath("../../Torso")
node_b = NodePath("../../LegR")
disable_collision = false

[node name="ArmL" type="PinJoint2D" parent="Player/Joints"]
position = Vector2( -4.30865, 3.0279 )
node_a = NodePath("../../Torso")
node_b = NodePath("../../ArmL")
disable_collision = false

[node name="ArmR" type="PinJoint2D" parent="Player/Joints"]
position = Vector2( 5.41074, 3.23813 )
node_a = NodePath("../../Torso")
node_b = NodePath("../../ArmR")
disable_collision = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 481.543, 174.654 )
current = true
zoom = Vector2( 0.6, 0.6 )

[node name="StaticBody2D" type="StaticBody2D" parent="Camera2D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2( 0, 188.574 )
shape = SubResource( 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2( 0, -188.595 )
shape = SubResource( 8 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2( 329.563, 0 )
shape = SubResource( 9 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2( -329.707, 0 )
shape = SubResource( 9 )

[node name="ship" type="Sprite" parent="."]
position = Vector2( 484.604, -108.226 )
scale = Vector2( 0.343408, 0.343408 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ship"]
anims/end = SubResource( 11 )

[node name="rock2" parent="." instance=ExtResource( 6 )]
position = Vector2( 464.887, 117.476 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -25.0
autoplay = true
[connection signal="animation_finished" from="ship2/AnimationPlayer" to="." method="_on_AnimationPlayer_animation2_finished"]
[connection signal="timeout" from="spawn/Timer" to="spawn" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="ship/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
